<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSilver"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:contentDescription="@string/DecriptionLogo"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Left_dice"
                android:layout_width="wrap_content"
                android:layout_height="226dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dice"
                app:srcCompat="@drawable/dice3" />

            <ImageView
                android:id="@+id/right_dice"
                android:layout_width="wrap_content"
                android:layout_height="223dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dice"
                app:srcCompat="@drawable/dice4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/UserDieText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:text="@string/userDie"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ComputerDieText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="0dp"
                android:text="@string/ComputerDie"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textIsSelectable="false"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/HighLowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/lower_button"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="15dp"
                android:background="@color/colorWhite"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/LowerBtn"
                android:textSize="20sp" />

            <Button
                android:id="@+id/higher_button"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorWhite"
                android:paddingTop="10dp"
                android:paddingBottom="0dp"
                android:text="@string/HigherBtn"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                tools:text="something" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>